Change volume adjustment to be async to avoid locking up the UI

--- a/src/App.config
+++ b/src/App.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
   <appSettings>
     <add key="TraditionSongsPath" value="C:\BallparkMusic\TraditionSongs"/>
@@ -10,7 +10,7 @@
     <add key="SavedQueuesFolderPath" value="C:\BallparkMusic\SavedQueues"/>
     <add key="SoundClipsPath" value="C:\BallparkMusic\SoundClips"/>
     <add key="WalkUpSongsPath" value="C:\BallparkMusic\WalkUpSongs"/>
-    <add key="PlayersFilePath" value="C:\BallparkMusic\Players.txt" />
-    <add key="PositionsFilePath" value="C:\BallparkMusic\Positions.txt" />
+    <add key="PlayersFilePath" value="C:\BallparkMusic\Players.txt"/>
+    <add key="PositionsFilePath" value="C:\BallparkMusic\Positions.txt"/>
   </appSettings>
 </configuration>
