Add 2nd media player Add column for sound clips Add support for default saved queue file

--- a/src/App.config
+++ b/src/App.config
@@ -8,6 +8,7 @@
     <add key="FullOrganAndMiscPath" value="C:\BallparkMusic\FullOrganAndMisc"/>
     <add key="SongsPath" value="C:\BallparkMusic\Songs"/>
     <add key="SavedQueuesFolderPath" value="C:\BallparkMusic\SavedQueues"/>
+    <add key="SavedQueuesDefaultFileName" value="Game Day Defaults"/>
     <add key="SoundClipsPath" value="C:\BallparkMusic\SoundClips"/>
     <add key="WalkUpSongsPath" value="C:\BallparkMusic\WalkUpSongs"/>
     <add key="PlayersFilePath" value="C:\BallparkMusic\Players.txt"/>
