Volume Control, Master Search Feature

--- a/src/App.config
+++ b/src/App.config
@@ -11,6 +11,7 @@
     <add key="SavedQueuesDefaultFileName" value="Game Day Defaults"/>
     <add key="SoundClipsPath" value="C:\BallparkMusic\SoundClips"/>
     <add key="WalkUpSongsPath" value="C:\BallparkMusic\WalkUpSongs"/>
+    <add key="WalkUpDefaultFolderName" value="Avon Lakers"/>
     <add key="PlayersFilePath" value="C:\BallparkMusic\Players.txt"/>
     <add key="PositionsFilePath" value="C:\BallparkMusic\Positions.txt"/>
   </appSettings>
