Add short cut keys and sound clip button

--- a/src/App.config
+++ b/src/App.config
@@ -14,5 +14,6 @@
     <add key="WalkUpDefaultFolderName" value="Avon Lakers"/>
     <add key="PlayersFilePath" value="C:\BallparkMusic\Players.txt"/>
     <add key="PositionsFilePath" value="C:\BallparkMusic\Positions.txt"/>
+    <add key="StrikeoutSoundClipFilePath" value="C:\BallparkMusic\SoundClips\Good Play - K Strickout - Cha Ching Cash Register.mp3"/>
   </appSettings>
 </configuration>
